--- a/Shop/Shop/Views/Spaceship/Index.cshtml
+++ b/Shop/Shop/Views/Spaceship/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@model IEnumerable<Shop.Models.Spaceship.SpaceshipViewModel>
+﻿@model IEnumerable<Shop.Models.Spaceship.SpaceshipListViewModel>
+
+@{
+    int rowNumber = 0;
+}
 
 <div class="h1">
     Products
@@ -22,30 +26,23 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td class="">StarShip</td>
-                <td class="">Cargo</td>
-                <td class="">10</td>
-                <td class="">12.04.2021</td>
-                <td class="">13.05.2021</td>
-                <td class="">
-                    <a asp-action="edit" asp-controller="spaceship" asp-route-id="" class="btn btn-primary">Edit</a>
-                    <input asp-action="delite" asp-controller="spaceship" asp-route-id="" type="submit" class="btn btn-danger" value="Delete" />
-                </td>
-            </tr>
-           @* @foreach (var spaceship in Model)
+            @foreach (var spaceship in Model)
             {
-              <tr>
-                    <th scope="row">1</th>
+
+                rowNumber += 1;
+                <tr>
+                    <th scope="row">@rowNumber</th>
                     <td class="">@spaceship.Name</td>
                     <td class="">@spaceship.ModelType</td>
                     <td class="">@spaceship.Passengers</td>
                     <td class="">@spaceship.BuildOfDate</td>
                     <td class="">@spaceship.LaunchDate</td>
+                    <td class="">
+                        <a asp-action="edit" asp-controller="spaceship" asp-route-id="" class="btn btn-primary">Edit</a>
+                        <input asp-action="delite" asp-controller="spaceship" asp-route-id="" type="submit" class="btn btn-danger" value="Delete" />
+                    </td>
                 </tr>
-
-            }*@
+            }
         </tbody>
     </table>
 
