--- a/Shop/Shop/Views/Spaceship/Edit.cshtml
+++ b/Shop/Shop/Views/Spaceship/Edit.cshtml
@@ -1,8 +1,13 @@
 ﻿@model Shop.Models.Spaceship.SpaceshipEditViewModel
 
-<h1>
-    Add
-</h1>
+@if (Model.Id.HasValue)
+{
+    <h1>Update</h1>
+}
+else
+{
+    <h1>Add</h1>
+}
 
 <div>
     <form method="post" enctype="multipart/form-data">
@@ -80,7 +85,15 @@
             </div>
         </div>
 
-        <input asp-action="add" asp-controller="spaceship" type="submit" class="btn btn-primary" value="Add" />
+        @if (Model.Id.HasValue)
+        {
+            <input asp-action="edit" asp-controller="spaceship" type="submit" class="btn btn-primary" value="Update" />
+        }
+        else
+        {
+            <input asp-action="add" asp-controller="spaceship" type="submit" class="btn btn-primary" value="Add" />
+        }
+        
         <a asp-action="Index" class="btn btn-primary">Index</a>
 
     </form>
