--- a/Shop/Shop/Views/Spaceship/Index.cshtml
+++ b/Shop/Shop/Views/Spaceship/Index.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <div>
-    <a asp-action="add" asp-controller="spaceship" type="submit" class="btn btn-primary">Add</a>
+    <a asp-action="create" asp-controller="spaceship" type="submit" class="btn btn-primary">Create</a>
 </div>
 
 <form method="post" class="m-1">
@@ -38,8 +38,8 @@
                     <td class="">@spaceship.BuildOfDate</td>
                     <td class="">@spaceship.LaunchDate</td>
                     <td class="">
-                        <a asp-action="edit" asp-controller="spaceship" asp-route-id="@spaceship.Id" class="btn btn-primary">Edit</a>
-                        <input asp-action="delite" asp-controller="spaceship" asp-route-id="@spaceship.Id" type="submit" class="btn btn-danger" value="Delete" />
+                        <a asp-action="update" asp-controller="spaceship" asp-route-id="@spaceship.Id" class="btn btn-primary">Update</a>
+                        <a asp-action="delete" asp-controller="spaceship" asp-route-id="@spaceship.Id" type="submit" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
             }
