--- a/Shop/Shop/Views/Spaceship/_Image.cshtml
+++ b/Shop/Shop/Views/Spaceship/_Image.cshtml
@@ -1,4 +1,4 @@
-﻿@model Shop.Models.Spaceship.ImageViewModels
+﻿@model Shop.Models.Spaceship.ImageViewModel
 
 <div class="form-group row col-sm-4 offset-2">
     <div>@Model.ImageTitle</div>
