--- a/Shop/Shop/Views/Spaceship/CreateUpdate.cshtml
+++ b/Shop/Shop/Views/Spaceship/CreateUpdate.cshtml
@@ -85,6 +85,16 @@ else
             </div>
         </div>
 
+        <div class="form-group row">
+            <label asp-for="Files" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-5">
+                <div class="custom-file">
+                <input class="form-control custom-file-input" asp-for="Files" multiple type="file" />
+                <label class="custom-file-label"></label>
+                </div>
+            </div>
+        </div>
+
         @foreach (var images in Model.Image)
         {
             <partial name="_Image" model="images" />
@@ -103,3 +113,20 @@ else
 
     </form>
 </div> 
+
+@section Scripts
+{
+    <script>
+        $(document).ready(function() {
+            var fileLabel = $(this).next('.custom-file-label');
+            var file = $(this)[0].files;
+            if(FileSystem.length > 1)
+            {
+                fileLabel.html(files.length + 'files selected');
+            }
+            else if (files.length == 1) {
+                fileLabel.html(files[0].name)
+            }
+        });
+    </script>
+}
