--- a/Shop/Shop/Views/Car/Index.cshtml
+++ b/Shop/Shop/Views/Car/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div class="h1">
-    Products
+    Car Register
 </div>
 
 <div>
-    <a asp-action="add" asp-controller="car" type="submit" class="btn btn-primary">Add</a>
+    <a asp-action="create" asp-controller="car" type="submit" class="btn btn-primary">Create</a>
 </div>
 
 <form method="post" class="m-1">
@@ -38,7 +38,7 @@
                     <td class="">@car.Model</td>
                     <td class="">@car.Color</td>
                     <td class="">
-                        <a asp-action="edit" asp-controller="car" asp-route-id="@car.Id" class="btn btn-primary">Edit</a>
+                        <a asp-action="update" asp-controller="car" asp-route-id="@car.Id" class="btn btn-primary">Update</a>
                         <a asp-action="delete" asp-controller="car" asp-route-id="@car.Id" class="btn btn-danger">Delete</a>
                     </td>
                 </tr>
