Add files and methods for adding pictures in database

--- a/Shop/Shop/Views/RealEstate/CreateUpdate.cshtml
+++ b/Shop/Shop/Views/RealEstate/CreateUpdate.cshtml
@@ -71,7 +71,7 @@ else
             </div>
         </div>
 
-@*
+
         <div class="form-group row">
             <label asp-for="Files" class="col-sm-2 col-form-label"></label>
             <div class="col-sm-5">
@@ -82,11 +82,11 @@ else
             </div>
         </div>
 
-        @foreach (var images in Model.Image)
+        @foreach (var images in Model.FileToApis)
         {
-            <partial name="_Image" model="images" />
-            <input asp-action="removeImage" asp-controller="spaceship" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-danger" value="Remove Image" />
-        }*@
+            <partial name="_Images" model="images" />
+            @*@<input asp-action="removeImage" asp-controller="realEstate" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-danger" value="Remove Image" />*@
+        }
 
         <hr />
 
@@ -103,7 +103,7 @@ else
 
     </form>
 </div>
-@*
+
 @section Scripts
     {
     <script>
@@ -118,4 +118,4 @@ else
             }
         });
     </script>
-}*@
+}
