--- a/Shop/Shop/Views/RealEstate/Index.cshtml
+++ b/Shop/Shop/Views/RealEstate/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Shop.Models.RealEstate.RealEstateViewModel>
+﻿@model IEnumerable<Shop.Models.RealEstate.RealEstateListViewModel>
 
 @{
     int rowNumber = 0;
