--- a/Shop/Shop/Views/RealEstate/CreateUpdate.cshtml
+++ b/Shop/Shop/Views/RealEstate/CreateUpdate.cshtml
@@ -85,7 +85,7 @@ else
         @foreach (var images in Model.FileToApis)
         {
             <partial name="_Images" model="images" />
-            @*@<input asp-action="removeImage" asp-controller="realEstate" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-danger" value="Remove Image" />*@
+            <input asp-action="removeImage" asp-controller="realEstate" asp-route-imageId="@images.PhotoId" type="submit" class="btn btn-danger" value="Remove Image" />
         }
 
         <hr />
