--- a/Shop/Shop/Views/Car/CreateUpdate.cshtml
+++ b/Shop/Shop/Views/Car/CreateUpdate.cshtml
@@ -104,9 +104,19 @@ else
             </div>
         </div>
 
+        <div class="form-group row">
+            <label asp-for="Pictures" class="col-sm-2 col-form-label"></label>
+            <div class="col-sm-5">
+                <div class="custom-file">
+                    <input class="form-control custom-file-input" asp-for="Pictures" multiple type="file" />
+                    <label class="custom-file-label"></label>
+                </div>
+            </div>
+        </div>
+
         @foreach (var images in Model.Image)
         {
-            <partial name="_Image" model="images" />
+            <partial name="_Picture" model="images" />
             <input asp-action="removeImage" asp-controller="car" asp-route-imageId="@images.PictureId" type="submit" class="btn btn-danger" value="Remove Image" />
         }
 
@@ -125,20 +135,18 @@ else
     </form>
 </div> 
 
-    @section Scripts
-{
+@section Scripts
+    {
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             var fileLabel = $(this).next('.custom-file-label');
             var file = $(this)[0].files;
-            if(FileSystem.length > 1)
-            {
+            if (FileSystem.length > 1) {
                 fileLabel.html(files.length + 'files selected');
             }
             else if (files.length == 1) {
                 fileLabel.html(files[0].name)
             }
         });
-
     </script>
 }
