Refactored and finish all project

--- a/Shop/Shop/Views/Shared/_Layout.cshtml
+++ b/Shop/Shop/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="WeatherForecast" asp-action="SearchCity">Weather Forecast</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OpenWeather" asp-action="SearchCity">Open Weather</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OpenWeather" asp-action="City">Open Weather</a>
                         </li>
                     </ul>
                 </div>
